<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="by.it.academy.foodmanager.app.domain.models.ProductDomain" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/AddProductDialogStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="32sp"
        tools:context=".app.presentation.ui.fragments.AddProductFragment">

        <ImageView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:paddingTop="6dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_title"
            style="@style/DialogTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_product_dialog_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/add_product_name"
            app:layout_constraintEnd_toStartOf="@id/make_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

        <ImageView
            android:id="@+id/make_photo"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_add_a_photo"
            app:layout_constraintBottom_toBottomOf="@id/et_product_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/et_product_name"
            app:layout_constraintTop_toTopOf="@id/et_product_name" />

        <EditText
            android:id="@+id/et_product_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/add_enter_your_comment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_product_name" />

        <TextView
            android:id="@+id/tv_creation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:paddingStart="4dp"
            android:text="@string/creation_date"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/et_creation_date"
            app:layout_constraintEnd_toStartOf="@id/et_creation_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_product_comment" />


        <EditText
            android:id="@+id/et_creation_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/et_expiration_date"
            app:layout_constraintStart_toStartOf="@+id/et_expiration_date"
            app:layout_constraintTop_toBottomOf="@+id/et_product_comment" />


        <TextView
            android:id="@+id/tv_expiration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:paddingStart="4dp"
            android:text="@string/expiration_date"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/et_expiration_date"
            app:layout_constraintEnd_toStartOf="@id/et_expiration_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_creation" />

        <EditText
            android:id="@+id/et_expiration_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="00.00.0000"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/edit_expiration_date"
            app:layout_constraintStart_toEndOf="@id/tv_expiration"
            app:layout_constraintTop_toBottomOf="@+id/et_creation_date" />

        <ImageView
            android:id="@+id/edit_expiration_date"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginHorizontal="8dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_calendar"
            app:layout_constraintBottom_toBottomOf="@id/et_expiration_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/et_expiration_date"
            app:layout_constraintTop_toTopOf="@id/et_expiration_date" />

        <TextView
            android:id="@+id/tv_enable_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:paddingHorizontal="4dp"
            android:text="@string/enable_notification"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/swith_enable_notification"
            app:layout_constraintTop_toTopOf="@id/swith_enable_notification" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swith_enable_notification"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_enable_notification"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_expiration_date" />


        <LinearLayout
            android:id="@+id/notification_settings_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/fab_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_enable_notification">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/notification_settings_title"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_days_number"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:hint="0"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="16dp"
                    android:text="@string/days"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:text="@string/choose_time_of_notification"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_notification_time"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="09:00"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_settings_field" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
